@@ -1,0 +1,6 @@
+boring_club:
+  name: Banana appreciation society
+moustache_club:
+  name: Moustache and Eyebrow Fancier Club
+crazy_club:
+  name: Skull and bones
