@@ -1,0 +1,4 @@
+groucho:
+  name: Groucho Marx
+some_other_guy:
+  name: Englebert Humperdink
