@@ -1,0 +1,3 @@
+moustache_club_sponsor_for_groucho:
+  sponsor_club: moustache_club
+  sponsorable: groucho (Member)
